--- a/hesapmakinasıbeta2/Base.lproj/LaunchScreen.storyboard
+++ b/hesapmakinasıbeta2/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -11,15 +13,83 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="images" translatesAutoresizingMaskIntoConstraints="NO" id="KTF-OG-kzp">
+                                <rect key="frame" x="-13" y="69" width="455" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="160" id="Iez-Tj-nZV"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="160" id="McC-AL-OcM"/>
+                                    <constraint firstAttribute="width" secondItem="KTF-OG-kzp" secondAttribute="height" multiplier="91:32" id="MwJ-mM-53Z"/>
+                                    <constraint firstAttribute="width" constant="455" id="lK9-xV-yPX"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HbS-TW-gbo">
+                                <rect key="frame" x="118" y="852" width="193" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="26" id="hwE-K5-QTS"/>
+                                    <constraint firstAttribute="width" secondItem="HbS-TW-gbo" secondAttribute="height" multiplier="193:26" id="mVS-rx-lgK"/>
+                                    <constraint firstAttribute="height" constant="26" id="nWW-4Y-b50"/>
+                                    <constraint firstAttribute="width" constant="193" id="qaw-nR-gIG"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="sürdür"/>
+                                <connections>
+                                    <action selector="enterbutton:" destination="Zi6-dO-9ls" eventType="editingDidEndOnExit" id="fq1-Bz-wcr"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hesaplayıcıya hoşgeldiniz!" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="4" highlighted="YES" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2XO-KB-dci">
+                                <rect key="frame" x="30" y="177" width="369" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="6m0-ch-he2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <size key="shadowOffset" width="1" height="-1"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="20" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aF7-rK-OIW">
+                                <rect key="frame" x="108.66666666666667" y="397" width="211.66666666666663" height="365"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="aF7-rK-OIW" secondAttribute="height" multiplier="358:617" id="6Yw-UW-QVt"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="617" id="d4E-m3-8S6"/>
+                                    <constraint firstAttribute="height" constant="365" id="mUM-yD-LF3"/>
+                                    <constraint firstAttribute="width" constant="358" id="vZs-r3-opH"/>
+                                </constraints>
+                                <string key="text">hesaplayıcı sizin için en çok kullanılan işlemleri en sade şekilde önünüze getiriyor. şimdi en çok kullandığınız 6 işlem mükemmel bir şekilde hizalanıyor. sayıları girerek çok kısa şekilde sonuca ulaşıyorsunuz. toplama , çıkartma, çaarpma, bölme, üs alma ve yüzde hesaplama ihtiyacınız olduğunda elinizin altında oluyor. ve sizin en çok kullandığınız, en optimize  ,en işlevsel  ve en iyi halimize gelmek için hep çalışıyoruz.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="KTF-OG-kzp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="25" id="4um-ek-KQe"/>
+                            <constraint firstItem="HbS-TW-gbo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="118" id="6NN-H0-opl"/>
+                            <constraint firstItem="2XO-KB-dci" firstAttribute="centerX" secondItem="aF7-rK-OIW" secondAttribute="centerX" id="FL5-Ne-Bql"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="HbS-TW-gbo" secondAttribute="bottom" constant="14" id="QrF-h3-hrz"/>
+                            <constraint firstItem="HbS-TW-gbo" firstAttribute="top" secondItem="aF7-rK-OIW" secondAttribute="bottom" constant="90" id="Sie-SE-Dfj"/>
+                            <constraint firstItem="KTF-OG-kzp" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-33" id="czm-9G-KT4"/>
+                            <constraint firstItem="2XO-KB-dci" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="133" id="fTP-9J-oJ5"/>
+                            <constraint firstItem="KTF-OG-kzp" firstAttribute="centerX" secondItem="2XO-KB-dci" secondAttribute="centerX" id="nd2-Zy-hqA"/>
+                            <constraint firstItem="KTF-OG-kzp" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="pEf-dR-cUY"/>
+                            <constraint firstItem="2XO-KB-dci" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="xXa-Lh-lP6"/>
+                            <constraint firstItem="aF7-rK-OIW" firstAttribute="centerX" secondItem="HbS-TW-gbo" secondAttribute="centerX" id="xdc-Kv-Sxz"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Zi6-dO-9ls" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="51.86915887850467" y="374.51403887688986"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="images" width="225" height="225"/>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
